# Dadbot

./: .gitignore  .gitmodules  Cargo.toml  Dadbot.py  Dockerfile  LICENSE  README.md  bot.js  build  build.rs  package-lock.json  package.json
backend/: Dockerfile  api.py  bot.py  requirements.txt  server.py
bot/: Dockerfile
bot/src/: main.rs
proto/: backend.proto
res/: config.ini  config.json  dadbot.json
server/: backend_pb2.py  backend_pb2.pyi  backend_pb2_grpc.py  server.py
src/: Dadbot.py  conversation.rs  main.rs
