[package]
name = "dadbot"
version = "0.1.0"
authors = ["Ralakus <mikhail@licas.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
serenity = "*"
reqwest = "*"
tokio = { version = "*", features = ["full"]}