[package]
name = "dadbot"
version = "0.1.0"
authors = ["Ralakus <mikhail@licas.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "rustls_backend",
    "model",
] }
pyo3 = { version = "0.17", features = [] }
regex = { version = "*", features = ["pattern"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
