[package]
name = "dadbot"
version = "0.1.0"
authors = ["Ralakus <mikhail@licas.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
pretty_env_logger = "0.4"
http-body = "0.4"
hyper = "0.14"
hyper-rustls = { version = "0.23", features = ["http2"] }
log = "0.4"
prost = "0.11"
rustls = "0.20"
serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "rustls_backend",
    "model",
] }
regex = { version = "*", features = ["pattern"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.8", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"


[build-dependencies]
tonic-build = "0.8"
